# bff-workshop

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: fd91dbd6599d_first_migration_add_books_table.py
bff_workshop/: main.py
bff_workshop/book/: models.py  orms.py  views.py
bff_workshop/questions/: views.py
