[tool.poetry]
name = "bff-workshop"
version = "0.1.0"
description = ""
authors = ["Avishay Maor <avishay@maor.co>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
fastapi-sqlalchemy = "^0.2.1"
pydantic = "^2.7.3"
alembic = "^1.13.1"
psycopg2-binary = "^2.9.9"
uvicorn = "^0.30.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
